--- a/CSAuto/Properties/Resources.resx
+++ b/CSAuto/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="main" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\main.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TELEGRAM_BOT_TOKEN" xml:space="preserve">
+    <value />
+  </data>
 </root>
