added bot link button to telegram chat id, added color selection

--- a/CSAuto/Properties/Resources.resx
+++ b/CSAuto/Properties/Resources.resx
@@ -120,6 +120,9 @@
   <data name="AVAILABLE_MAPS_STRING" xml:space="preserve">
     <value>ar_baggage,ar_dizzy,ar_lunacy,ar_monastery,ar_shoots,coop_kasbah,cs_agency,cs_assault,cs_insertion,cs_italy,cs_militia,cs_office,cs_workout,de_abbey,de_ancient,de_anubis,de_austria,de_aztec,de_bank,de_biome,de_breach,de_cache,de_canals,de_cbble,de_chlorine,de_dust,de_dust2,de_inferno,de_lake,de_mirage,de_mutiny,de_nuke,de_overpass,de_ruby,de_safehouse,de_seaside,de_shipped,de_shortdust,de_shortnuke,de_stmarc,de_studio,de_subzero,de_sugarcane,de_swamp,de_train,de_vertigo,de_zoo,dz_blacksite,dz_junglety,gd_cbble,gd_rialto</value>
   </data>
+  <data name="AVAILABLE_THEME_COLORS" xml:space="preserve">
+    <value>"Red", "Green", "Blue", "Purple", "Orange", "Lime", "Emerald", "Teal", "Cyan", "Cobalt", "Indigo", "Violet", "Pink", "Magenta", "Crimson", "Amber", "Yellow", "Brown", "Olive", "Steel", "Mauve", "Taupe", "Sienna"</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="main" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\main.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
