--- a/src/CSAuto/Languages/Strings.resx
+++ b/src/CSAuto/Languages/Strings.resx
@@ -695,4 +695,10 @@ Try to download the latest version from github, if it didn't help create a bug r
   <data name="text_description" xml:space="preserve">
     <value>Counter-Strike 2 companion that automates in-game tasks, such as accepting match, buying items and more</value>
   </data>
+  <data name="title_optimization" xml:space="preserve">
+    <value>Optimization</value>
+  </data>
+  <data name="msgbox_hdroptimization" xml:space="preserve">
+    <value>A display that supports HDR has been found, the current settings are not optimized for HDR displays, do you want to optimize the settings?</value>
+  </data>
 </root>
