--- a/src/CSAuto/Languages/Strings.ru.resx
+++ b/src/CSAuto/Languages/Strings.ru.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="language_en-EN" xml:space="preserve">
+  <data name="language_en-US" xml:space="preserve">
     <value>Английский</value>
   </data>
   <data name="language_ru-RU" xml:space="preserve">
