--- a/src/CSAuto/Languages/Strings.ru.resx
+++ b/src/CSAuto/Languages/Strings.ru.resx
@@ -429,7 +429,7 @@
     <value>Максимальное количество кнопок - 1 (Ограничения Discord)</value>
   </data>
   <data name="error_appcrashed" xml:space="preserve">
-    <value>Произошла непредвиденная ошибка!, отправлен отчет о сбое.</value>
+    <value>Произошла непредвиденная ошибка!, вы хотите отправить отчет о сбое?</value>
   </data>
   <data name="error_discordselecttemplate" xml:space="preserve">
     <value>Пожалуйста, выберите шаблон кнопки</value>
