--- a/src/CSAuto/Properties/Resources.he.resx
+++ b/src/CSAuto/Properties/Resources.he.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,99 +117,4 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AVAILABLE_THEME_COLORS" xml:space="preserve">
-    <value>"Red", "Green", "Blue", "Purple", "Orange", "Lime", "Emerald", "Teal", "Cyan", "Cobalt", "Indigo", "Violet", "Pink", "Magenta", "Crimson", "Amber", "Yellow", "Brown", "Olive", "Steel", "Mauve", "Taupe", "Sienna"</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="GAMESTATE_EXAMPLE" xml:space="preserve">
-    <value>{
-	"provider": {
-		"name": "Counter-Strike: Global Offensive",
-		"appid": 730,
-		"version": 13879,
-		"steamid": "76561198341800115",
-		"timestamp": 1692506622
-	},
-	"map": {
-		"mode": "competitive",
-		"name": "de_mirage",
-		"phase": "live",
-		"round": 0,
-		"team_ct": {
-			"score": 0,
-			"consecutive_round_losses": 1,
-			"timeouts_remaining": 1,
-			"matches_won_this_series": 0
-		},
-		"team_t": {
-			"score": 0,
-			"name": "wat doink",
-			"consecutive_round_losses": 1,
-			"timeouts_remaining": 1,
-			"matches_won_this_series": 0
-		},
-		"num_matches_to_win_series": 0,
-		"current_spectators": 0,
-		"souvenirs_total": 0
-	},
-	"round": {
-		"phase": "freezetime"
-	},
-	"player": {
-		"steamid": "76561198341800115",
-		"clan": "wat doink",
-		"name": "ʍuɹʞy",
-		"observer_slot": 1,
-		"team": "T",
-		"activity": "playing",
-		"state": {
-			"health": 100,
-			"armor": 0,
-			"helmet": false,
-			"flashed": 0,
-			"smoked": 0,
-			"burning": 0,
-			"money": 800,
-			"round_kills": 0,
-			"round_killhs": 0,
-			"equip_value": 200
-		},
-		"weapons": {
-			"weapon_0": {
-				"name": "weapon_knife_t",
-				"paintkit": "default",
-				"type": "Knife",
-				"state": "holstered"
-			},
-			"weapon_1": {
-				"name": "weapon_glock",
-				"paintkit": "cu_glock18_weasel",
-				"type": "Pistol",
-				"ammo_clip": 20,
-				"ammo_clip_max": 20,
-				"ammo_reserve": 120,
-				"state": "holstered"
-			},
-			"weapon_2": {
-				"name": "weapon_c4",
-				"paintkit": "default",
-				"type": "C4",
-				"state": "active"
-			}
-		},
-		"match_stats": {
-			"kills": 0,
-			"assists": 0,
-			"deaths": 0,
-			"mvps": 0,
-			"score": 0
-		}
-	}
-}</value>
-    <comment>@Invariant</comment>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="main" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Icons\main.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
 </root>
