--- a/src/CSAuto/Languages/Strings.ru.resx
+++ b/src/CSAuto/Languages/Strings.ru.resx
@@ -710,4 +710,10 @@
   <data name="language_he-IL" xml:space="preserve">
     <value>Иврит</value>
   </data>
+  <data name="language_ko-KR" xml:space="preserve">
+    <value>Корейский</value>
+  </data>
+  <data name="language_it-IT" xml:space="preserve">
+    <value>Итальянский</value>
+  </data>
 </root>
